# copy_trade

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  README.md  alembic.ini  copilot-instructions.md  pyproject.toml  requirements.in
.agents/: backend-api.agent.md  billing-subscription.agent.md  database-data-model.agent.md  documentation-session.agent.md  exchange-integration.agent.md  frontend-ui.agent.md  infrastructure-devops.agent.md  manifest.md  security.agent.md  testing-qa.agent.md  trading-execution.agent.md
.github/workflows/: ci.yml
apps/api/tests/: test_admin_credentials.py  test_copy_relationships.py  test_foundation_controls.py  test_health.py  test_identity.py  test_readiness.py  test_sessions.py
apps/web/: README.md  package-lock.json  package.json  playwright.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/tests/: operations-console.spec.ts
docs/adr/: ADR-001-stack-reset.md  ADR-002-event-driven-copy-architecture.md  ADR-003-exchange-adapter-contract.md  ADR-004-event-retry-dlq-policy.md
docs/restart/: 00_verified_restart_plan.md  01_exchange_api_research_log.md  02_sprint_1_backlog.md  03_foundation_runbook.md  04_environment_verification.md  05_open_implementation_plans.md
docs/sessions/: 2026-04-26-session.md  2026-04-27-session.md  2026-04-29-session.md
infra/docker/: .env.example  api.Dockerfile  docker-compose.yml  worker.Dockerfile
infra/migrations/versions/: 20260426_0001_copy_execution_foundation.py  20260426_0002_copy_execution_results.py  20260426_0003_unique_active_copy_relationship.py  20260426_0004_admin_audit_logs.py  20260426_0005_identity_foundation.py  20260426_0006_identity_hardening.py  20260427_0007_access_risk_operations_foundation.py  20260427_0008_login_session_foundation.py
workers/billing_worker/: README.md
workers/copy_engine/tests/: test_dead_letters.py  test_handler.py  test_main.py  test_postgres_persistence.py  test_processor.py
workers/exchange_streamer/: README.md
workers/notification_worker/: README.md
(+24 files in other folders)
