[project]
name = "copy-trade-platform"
version = "0.1.0"
description = "Fresh V1 foundation for the Copy Trade platform."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = [
  "apps/api/src",
  "workers/copy_engine/src",
  "packages/domain/src",
  "packages/exchange_adapters/src"
]
testpaths = [
  "apps/api/tests",
  "workers/copy_engine/tests",
  "packages/domain/tests",
  "packages/exchange_adapters/tests"
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = [
  "apps/api/src",
  "workers/copy_engine/src",
  "packages/domain/src",
  "packages/exchange_adapters/src"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
